# trading_app

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: pr-tests.yml
tests/: test_smoke.py
tests/backtesting/: test_engine.py  test_engine_cost_and_risk.py  test_metrics.py
tests/cli/: test_ingest_history.py  test_main.py
tests/data/: test_parquet_store.py  test_pipeline.py  test_yfinance_source.py
tests/portfolio/: test_risk.py
tests/strategies/: test_sma_crossover.py
trading_app/backtesting/: __init__.py  costs.py  engine.py  metrics.py  results.py
trading_app/cli/: main.py
trading_app/config/: settings.py
trading_app/data/: pipeline.py  schemas.py
trading_app/data/sources/: __init__.py  base.py  yfinance_source.py
trading_app/data/storage/: base.py  parquet_store.py
trading_app/execution/: broker.py  orders.py
trading_app/interfaces/: api.py
trading_app/portfolio/: models.py  risk.py
trading_app/services/: event_bus.py  scheduler.py
trading_app/strategies/: __init__.py  base.py  buy_and_hold.py  registry.py  sma_crossover.py
trading_app/utils/: logging.py  time.py
