[project]
name = "trading-app"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "black==24.10.0",
  "numpy==2.4.2",
  "pandas==3.0.0",
  "matplotlib==3.10.8",
  "tqdm==4.67.3",
  "yfinance==1.1.0",
  "pyarrow==19.0.0",
  "pytest==8.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
